fixed responsive on mobile

--- a/include/parallax/parallax.css
+++ b/include/parallax/parallax.css
@@ -200,7 +200,7 @@ a {
   visibility: hidden;
   opacity: 0;
   margin: 0;
-  padding-top: 169px;
+  padding-top: 157px;
 }
 
 .imgWrap:hover .imgDescription {
